<resources>
    <string name="app_name">Chargent</string>
    <string name="nav_map_label">Map</string>
    <string name="nav_list_label">List</string>
    <string name="menu_appbar_filter_label">Filter</string>
    <string name="menu_appbar_sort_label">Sort</string>
    <string name="menu_appbar_filter_plate_label">by plate number</string>
    <string name="menu_appbar_filter_battery_label">by remaining battery</string>
    <string name="menu_appbar_sort_distance_label">by distance</string>
    <string name="no_internet">No internet connection</string>
    <string name="no_title">No title</string>
    <string name="no_plate">No plate</string>
    <string name="no_address">No address</string>
    <string name="photo_of_the_car">photo of the car</string>
    <string name="battery_percentage">battery percentage</string>
    <string name="battery_distance">battery distance</string>
    <string name="is_battery_charging">is battery charging</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="distance_from_user">distance from user</string>
    <string name="add_km">%1$skm</string>
    <string name="add_percent">%1$s%%</string>
    <string name="enabled">Enabled</string>
    <string name="set_plate_number_filter">Plate # filter</string>
    <string name="set_battery_filter">Battery % filter</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
</resources>
